--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,84 @@
-﻿absl-py==2.1.0
-astunparse==1.6.3
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-chex==0.1.86
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.1
-cycler==0.12.1
-etils==1.5.2
-Flask==3.0.3
-flatbuffers==24.3.25
-flax==0.8.5
-fonttools==4.53.1
-fsspec==2024.6.1
-gast==0.6.0
-google-auth==2.34.0
-google-auth-oauthlib==1.2.1
-google-pasta==0.2.0
-grpcio==1.65.5
-h5py==3.11.0
-humanize==4.10.0
-idna==3.7
-importlib_metadata==8.2.0
-importlib_resources==6.4.2
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.4
+﻿#absl-py==2.1.0
+#astunparse==1.6.3
+#blinker==1.8.2
+#cachetools==5.5.0
+#certifi==2024.7.4
+#charset-normalizer==3.3.2
+#chex==0.1.86
+#click==8.1.7
+#colorama==0.4.6
+#contourpy==1.2.1
+##cycler==0.12.1
+#etils==1.5.2
+#Flask==3.0.3
+#flatbuffers==24.3.25
+#flax==0.8.5
+#fonttools==4.53.1
+#fsspec==2024.6.1
+#gast==0.6.0
+#google-auth==2.34.0
+#google-auth-oauthlib==1.2.1
+#google-pasta==0.2.0
+#grpcio==1.65.5
+##h5py==3.11.0
+#humanize==4.10.0
+#idna==3.7
+#importlib_metadata==8.2.0
+#importlib_resources==6.4.2
+#itsdangerous==2.2.0
+#jax==0.4.30
+#jaxlib==0.4.30
+#Jinja2==3.1.4
 keras==3.5.0
-kiwisolver==1.4.5
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+#kiwisolver==1.4.5
+#libclang==18.1.1
+#Markdown==3.7
+#markdown-it-py==3.0.0
+#MarkupSafe==2.1.5
 matplotlib==3.9.2
-mdurl==0.1.2
-ml-dtypes==0.3.2
-msgpack==1.0.8
-namex==0.0.8
+#mdurl==0.1.2
+#ml-dtypes==0.3.2
+#msgpack==1.0.8
+#namex==0.0.8
 nest-asyncio==1.6.0
 numpy==1.26.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
-optax==0.2.3
-optree==0.12.1
-orbax-checkpoint==0.6.1
-packaging==23.2
-pandas==2.2.2
-pillow==10.4.0
-protobuf==4.25.4
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-Pygments==2.18.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.7.1
-rsa==4.9
-scipy==1.13.1
-six==1.16.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
+#oauthlib==3.2.2
+#opt-einsum==3.3.0
+#optax==0.2.3
+#optree==0.12.1
+#orbax-checkpoint==0.6.1
+#packaging==23.2
+#pandas==2.2.2
+#pillow==10.4.0
+#protobuf==4.25.4
+#pyasn1==0.6.0
+#pyasn1_modules==0.4.0
+#Pygments==2.18.0
+#pyparsing==3.1.2
+#python-dateutil==2.9.0.post0
+#pytz==2024.1
+#PyYAML==6.0.2
+#requests==2.32.3
+#requests-oauthlib==2.0.0
+#rich==13.7.1
+#rsa==4.9
+#scipy==1.13.1
+#six==1.16.0
+#tensorboard==2.17.1
+#tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-estimator==2.15.0
 tensorflow-hub==0.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 tensorstore==0.1.64
-termcolor==2.4.0
+#termcolor==2.4.0
 tf_keras==2.17.0
-toolz==0.12.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
+#toolz==0.12.1
+#typing_extensions==4.12.2
+#tzdata==2024.1
+#urllib3==2.2.2
 websockets==13.0
 Werkzeug==3.0.3
-wrapt==1.14.1
-wurlitzer==3.1.1
-zipp==3.20.0
+#wrapt==1.14.1
+#wurlitzer==3.1.1
+#zipp==3.20.0
